--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,5 @@
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
-            <a href="/about">About me</a>
+            <a href="/about.html">About me</a>
           </div>
